--- a/simple2/frontend/public/index.html
+++ b/simple2/frontend/public/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <title>Vanilla Router</title>
-    <script type="module" src="src/index.js" defer></script>
+    <script type="module" src="/src/index.js" defer></script>
   </head>
   <body>
-    <nav class="nav">
-      <ul>
-        <li><a href="/" class="route">Home</a></li>
-        <li><a href="/about" class="route">About</a></li>
-      </ul>
-    </nav>
-    <div id="root"></div>
+    <div id="root">
+      <div id="router">
+        <nav class="nav">
+          <ul>
+            <li><a href="/" class="route">Home</a></li>
+            <li><a href="/about" class="route">About</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div id="page"></div>
+    </div>
   </body>
 </html>
