Fix: script 경로 수정

--- a/simple/frontend/public/index.html
+++ b/simple/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Vanilla Router</title>
-    <script type="module" src="src/index.js" defer></script>
+    <script type="module" src="/src/index.js" defer></script>
   </head>
   <body>
     <nav class="nav">
