--- a/simple2/frontend/public/index.html
+++ b/simple2/frontend/public/index.html
@@ -10,8 +10,8 @@
       <div id="router">
         <nav class="nav">
           <ul>
-            <li><a href="/" class="route">Home</a></li>
-            <li><a href="/about" class="route">About</a></li>
+            <li><a route href="/">Home</a></li>
+            <li><a route href="/about">About</a></li>
           </ul>
         </nav>
       </div>
