Feat: 동적 라우팅 예시 추가
- 마크업 업데이트
- User페이지 추가
- Router의 route메서드 업데이트

--- a/simple2/frontend/public/index.html
+++ b/simple2/frontend/public/index.html
@@ -12,6 +12,9 @@
           <ul>
             <li><a route href="/">Home</a></li>
             <li><a route href="/about">About</a></li>
+            <li><a route href="/user">User</a></li>
+            <li><a route href="/user/1">User1</a></li>
+            <li><a route href="/user/2">User2</a></li>
           </ul>
         </nav>
       </div>
